# fcsp-api

./: .gitignore  build_and_publish.sh  fcsp_config.json  pyproject.toml  setup.py  test_build.sh
examples/: README.md  fcsp_charging_state.py  fcsp_state_monitor.py
fcsp_api/: scanner.py
